--- a/index.html
+++ b/index.html
@@ -5,33 +5,33 @@
     <script type="text/javascript" src="/js/form.js"></script>
 </head>
 <body>
-<div class="smpl-form">
+<div class="form">
     <form method="POST" action="SaveTable.php">
-        <label>Last name</label>
-        <input type="text" name="last_name">
+        <label For="last_name">Last name</label>
+        <input type="text" id="last_name" name="last_name">
 
-        <label>First name</label>
-        <input type="text" name="first_name">
+        <label For="first_name">First name</label>
+        <input type="text" id="first_name" name="first_name">
 
-        <label>Middle name</label>
-        <input type="text" name="middle_name">
+        <label For="middle_name">Middle name</label>
+        <input type="text" id="middle_name" name="middle_name">
 
-        <label>Phone</label>
-        <input type="number" name="phone">
+        <label For="phone">Phone</label>
+        <input type="text" id="phone" name="phone">
 
-        <label>Email</label>
-        <input type="email" name="email">
+        <label For="email">Email</label>
+        <input type="email" id="email" name="email">
 
-        <label>Comments</label>
-        <textarea name="comments"></textarea>
+        <label For="comments">Comments</label>
+        <textarea name="comments" id="comments"></textarea>
 
-        <label>Tags</label>
-        <textarea name="tags"></textarea>
+        <label For="tags">Tags</label>
+        <textarea name="tags" id="tags"></textarea>
 
-        <label>City</label>
-        <input type="text" name="city">
+        <label For="city">City</label>
+        <input type="text" id="city" name="city">
 
-        <input type="submit" value="Send form" class="button">
+        <input type="submit" value="Отправить" class="button">
     </form>
 </div>
 </body>
